--- a/src/AspNetCoreRateLimit.Redis/AspNetCoreRateLimit.Redis.csproj
+++ b/src/AspNetCoreRateLimit.Redis/AspNetCoreRateLimit.Redis.csproj
@@ -12,7 +12,7 @@
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/stefanprodan/AspNetCoreRateLimit</RepositoryUrl>
     <LangVersion>9</LangVersion>
-    <Version>1.0.1</Version>
+    <Version>1.0.1$(VersionSuffix)</Version>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>../../sgKey.snk</AssemblyOriginatorKeyFile>
     <DelaySign>false</DelaySign>
